style.css
/* ... */
/*.highlight pre {
  font-family : 'Bitstream Vera Sans Mono', 'Courier', monospace;
  padding     : 0 1.5em;
}

.highlight br {
  display : none;
}

.highlight {
  background-color : #f8f8f8;
  border           : 1px solid silver;
  font-family      : 'Courier New', 'Terminal', monospace;
  color            : #100;
  margin           : 1.5em 0;
}*/

div#content div.pad {
  margin-left  : 0;
  margin-right : 0;
}

div#navigation ul li.lang {
  float       : right;
  border-left : none;
  font-size   : .83em;
  line-height : 3em;
}

#dsq-global-toolbar ul li {
  list-style-type : none;
}

.toc-anchor {
  font-size : 75%;
  color     : #aaa;
}

hr {
  border              : 1px solid #ddd;
  border-bottom-width : 0;
  margin              : 2em 0;
}

.button,
.button:active,
.button.active {
  position              : relative;
  overflow              : visible;
  display               : inline-block;
  padding               : 8px 10px;
  border                : 0;
  margin                : 0;
  -webkit-border-radius : 4px;
  -moz-border-radius    : 4px;
  -ms-border-radius     : 4px;
  -o-border-radius      : 4px;
  border-radius         : 4px;
  background-color      : #bdc7c9;
  cursor                : pointer;
  outline               : none;
  text-decoration       : none;
  text-transform        : uppercase;
  text-align            : center;
  font                  : 10px;
  color                 : #FFFFFF;
  white-space           : nowrap;
  height                : 30px;
}

.button:hover,
.button:focus,
.button:active,
.button.active {
  background-color : #959a9b;
  text-decoration  : none;
  color            : white;
}

body form input.st-search-input {
  background-color      : #f2f2f2;
  display               : inline-block;
  width                 : 100%;
  height                : 30px;
  padding               : 3px 7px 3px 27px;
  margin-right          : 6px;
  border                : none 0px;
  border-radius         : 5px;
  box-shadow            : none;
}

input[type=email] {
  background-color      : #f2f2f2;
  display               : inline-block;
  width                 : 190px;
  height                : 24px;
  padding               : 3px 7px;
  margin-right          : 6px;
  border                : none 0px;
  -moz-border-radius    : 5px;
  -webkit-border-radius : 5px;
  border-radius         : 5px;
}

::-webkit-input-placeholder {
 text-transform : uppercase;
 color          : #819699;
}
::-moz-placeholder { /* Firefox 18- */
  text-transform : uppercase;
  color          : #819699;
}
::-moz-placeholder {  /* Firefox 19+ */
 text-transform : uppercase;
 color          : #819699;
}
::-ms-input-placeholder {
 text-transform : uppercase;
 color          : #819699;
}

.blog-post h3 a {
  text-decoration : underline;
}

#imprint ul,
#imprint ul li {
  list-style-type : none;
  margin-left     : 0px;
}

.get-started-box {
  width            : 100%;
  margin           : 0 auto;
  height           : 150px;
  text-align       : center;
  background-color : transparent;
  padding          : 1em;
  margin-bottom    : 2em;
}

.big-text {
  color         : #607a84;
  font-size     : 1.5em;
  font-weight   : 400;
  padding-top   : 2em;
  margin-bottom : 1.2em;
  text-align    : center;
}

.get-started-button,
.get-started-button:visited,
.get-started-button:active {
  background-color      : #a53230;
  -moz-border-radius    : 5px;
  -webkit-border-radius : 5px;
  border-radius         : 5px;
  display               : inline-block;
  color                 : #ffffff;
  border-width          : 0px;
  font-weight           : 400;
  letter-spacing        : 1px;
  font-size             : 2em;
  padding               : 20px 50px;
  text-decoration       : none;
}

.get-started-button:hover {
  background-color : #d93f3c;
  color            : #ffffff;
  text-decoration  : none;
}

.note-box {
  background-color: #E3E3E3;
  padding: 10px;
  border-bottom-left-radius  : 8px 8px;
  border-bottom-right-radius : 8px 8px;
  border-top-left-radius     : 8px 8px;
  border-top-right-radius    : 8px 8px;
}

.language-docs {
  font-size      : 1.2em;
  text-transform : uppercase;
  text-align     : center;
  list-style-type: none;
  width          : 500px;
  margin         : 0 auto;
  line-height    : 1.8em;
  -webkit-columns: 3; /* Chrome, Safari, Opera */
  -moz-columns: 3; /* Firefox */
  columns: 3;
}

.language-docs a,
.language-docs a:visited,
.language-docs a:active {
  color           : #af6868;
  font-weight     : 800;
  text-decoration : none;
  padding-right   : 1em;
}

.language-docs a:hover,
.language-docs a:visited:hover {
  color : #337389;
}

.intro-links {
  font-size      : 1.2em;
  margin         : 0 auto;
  line-height    : 1.8em;
}

#main ul.intro-links li {
  list-style-type: none;
  margin-top: 0.5em;
  margin-left 0px;
}

.intro-links a {
  text-decoration: none;
}

.large-6 {
  position : relative;
  float    : left;
  padding  : 0;
  width    : 50%;
  display  : inline-block;
  clear    : all;
}

.column,
.columns {
  position      : relative;
}

/* syntax highlighting */
.highlight  { background: #ffffff; }
.highlight .hll { background-color: #ffffcc }
.highlight .c { color: #aaaaaa; font-style: italic } /* Comment */
.highlight .err { color: #F00000; background-color: #F0A0A0 } /* Error */
.highlight .k { color: #0000aa } /* Keyword */
.highlight .cm { color: #aaaaaa; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #4c8317 } /* Comment.Preproc */
.highlight .c1 { color: #aaaaaa; font-style: italic } /* Comment.Single */
.highlight .cs { color: #0000aa; font-style: italic } /* Comment.Special */
.highlight .gd { color: #aa0000 } /* Generic.Deleted */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
.highlight .gi { color: #00aa00 } /* Generic.Inserted */
.highlight .go { color: #888888 } /* Generic.Output */
/* ... */

